// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayerToolbar Should match toolbar snapshot WITH Edit button 1`] = `
<div
  className="toolbar"
  data-test="layertoolbar"
>
  <IconButton
    className="editButton"
    dataTest="editbutton"
    onClick={[Function]}
    tooltip="Edit"
  >
    <SvgEdit24 />
  </IconButton>
  <IconButton
    className="visible"
    dataTest="visibilitybutton"
    onClick={[Function]}
    tooltip="Toggle visibility"
  >
    <SvgView24 />
  </IconButton>
  <div
    className="sliderContainer"
  >
    <Tooltip
      closeDelay={200}
      content="Set layer opacity"
      dataTest="dhis2-uicore-tooltip"
      maxWidth={300}
      openDelay={200}
      placement="top"
    >
      <OpacitySlider
        disabled={false}
        onChange={[Function]}
        opacity={0}
      />
    </Tooltip>
  </div>
  <div
    className="menuButton"
  >
    <Connect(LayerToolbarMoreMenu)
      onEdit={[Function]}
    />
  </div>
</div>
`;

exports[`LayerToolbar Should match toolbar snapshot without Edit button 1`] = `
<div
  className="toolbar"
  data-test="layertoolbar"
>
  <IconButton
    className="visible"
    dataTest="visibilitybutton"
    onClick={[Function]}
    tooltip="Toggle visibility"
  >
    <SvgView24 />
  </IconButton>
  <div
    className="sliderContainer"
  >
    <Tooltip
      closeDelay={200}
      content="Set layer opacity"
      dataTest="dhis2-uicore-tooltip"
      maxWidth={300}
      openDelay={200}
      placement="top"
    >
      <OpacitySlider
        disabled={false}
        onChange={[Function]}
        opacity={0}
      />
    </Tooltip>
  </div>
  <div
    className="menuButton"
  >
    <Connect(LayerToolbarMoreMenu) />
  </div>
</div>
`;
